# IntroDeepCompVision_projects

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Project_1/: IDLCV_Project_1_hotdog.ipynb
Project_1/models/: model_performance.pkl
Project_2/: datasets.py  logger.py  main.py  model.py  run_on_gpu.sh  train.py
Project_2/outputs/: 2D_CNN_aggr_results_noleak.pkl  2D_CNN_early_fusion_results_noleak.pkl  2D_CNN_late_fusion_results.pkl  2D_CNN_late_fusion_results_noleak.pkl  3D_CNN_results.pkl  Flow_CNN_results_noleak.pkl
Project_3/: compare.py  losses.py  measure.py  predict.py  train.py  train_and_predict.sh  utils.py
Project_3/dataset/: driveDataset.py  drive_dataset.py  metrics_drive_encdec_crossentropyloss.txt  metrics_drive_unet_crossentropyloss.txt  metrics_drive_unet_focalloss.txt  metrics_drive_unet_weightedcrossentropyloss.txt  metrics_ph2_encdec_crossentropyloss.txt  metrics_ph2_unet_crossentropyloss.txt  metrics_summary.txt  ph2Dataset.py  ph2_dataset.py
Project_3/model/: EncDecModel.py  UNetModel.py  encdec_model.py  unet_model.py
Project_4/: data.ipynb  dataset.py  model.py  nms.py  prepare_data.py  train.py  train.sh
outputs/: 2D_CNN_aggr_cv_results.pkl  2D_CNN_aggr_results.pkl  2D_CNN_aggr_results_noleak.pkl  2D_CNN_early_fusion_cv_results.pkl  2D_CNN_early_fusion_results.pkl  2D_CNN_early_fusion_results_noleak.pkl  2D_CNN_late_fusion_cv_results.pkl  2D_CNN_late_fusion_results.pkl  2D_CNN_late_fusion_results_noleak.pkl  3D_CNN_cv_results.pkl  3D_CNN_results.pkl  3D_CNN_results_noleak.pkl  Flow_CNN_results_noleak.pkl
